Actualización proveedores de datos
Actualización de la relación de proveedores de datos

--- a/datos/fuentes_de_datos/index.html
+++ b/datos/fuentes_de_datos/index.html
@@ -279,44 +279,27 @@
 </thead>
 <tbody>
 <tr>
-<td>10037</td>
-<td>Ayuntamiento de Cáceres</td>
-</tr>
-<tr>
-<td>caaymad</td>
-<td>Ayuntamiento de Madrid</td>
-</tr>
-<tr>
 <td>calrj</td>
 <td>Comunidad Autónoma de La Rioja</td>
-</tr>
-<tr>
-<td>camad</td>
-<td>Comunidad de Madrid</td>
 </tr>
 <tr>
 <td>canav</td>
 <td>Comunidad Foral de Navarra</td>
 </tr>
 <tr>
-<td>cnig</td>
-<td>Centro Nacional de Información Geográfico</td>
-</tr>
-<tr>
-<td>dpbcn</td>
-<td>Diputación de Barcelona</td>
-</tr>
-<tr>
-<td>dgcat</td>
-<td>Dirección General de Catastro</td>
-</tr>
-<tr>
 <td>ieca</td>
 <td>Instituto de Estadística y Cartografía de Andalucía</td>
 </tr>
+<tr>
+<td>mun10037</td>
+<td>Ayuntamiento de Cáceres</td>
+</tr>
+<tr>
+<td><br /></td>
+<td></td>
+</tr>
 </tbody>
 </table>
-<p><br /></p>
 <hr /></div>
         
         
