--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 <p>Disponer de un callejero de referencia es estratégico para la gestión ordinaria de todas las Administraciones Públicas y para la prestación de servicios básicos de distribución, así como para un gran número de actividades comerciales, distribución postal y de paquetería, estudios de geoestadística, análisis espacial y atención de emergencias, entre otros.
 <br /></p>
 <p><br />
-<img alt="Calle de las dichas. Valdealgorfa. Teruel(fuente:personal)" src="img/calle_de_las_dichas.jpg" title="Calle de las dichas. Valdealgorfa. Teruel (fuente:personal)" />
+<img alt="Calle de las dichas. Valdealgorfa. Teruel(fuente:personal)" src="../../img/calle_de_las_dichas.jpg" title="Calle de las dichas. Valdealgorfa. Teruel (fuente:personal)" />
 <br />
 <br /></p>
 <p>En España la competencia de la definición de los nomenclátores de calles así como la asignación de la numeración de cada dirección corresponde a los ayuntamientos, quienes tienen la obligación de su actualización y publicación anual, no existiendo un organismo específico que tenga asignada la misión de su recopilación y publicación.</p>
@@ -402,5 +402,5 @@
 
 <!--
 MkDocs version : 1.2.2
-Build Date UTC : 2022-02-15 12:53:24.566923+00:00
+Build Date UTC : 2022-02-28 09:47:26.472118+00:00
 -->
