--- a/referencias/municipios/index.html
+++ b/referencias/municipios/index.html
@@ -20033,7 +20033,7 @@ Municipios de España, por orden alfabético, expresados en lenguaje natural no 
 </tr>
 <tr>
 <td>12068</td>
-<td>Herbers</td>
+<td>Herbés</td>
 <td>Castelló/Castellón</td>
 <td>Comunitat Valenciana</td>
 </tr>
