--- a/referencias/ciudades_autonomas/index.html
+++ b/referencias/ciudades_autonomas/index.html
@@ -269,22 +269,20 @@
 <h2 id="ciudades-autonomas">CIUDADES AUTÓNOMAS</h2>
 <p><br />
 Ciudades autónomas de España, por orden alfabético, expresadas en lenguaje natural no indizado.</p>
-<p>Denominación de las ciudades autónomas, recomendada para rellenar el atributo <a href="../../datos/modelo_de_datos#371-comunidadciudad-autonoma"><strong><code>CA</code></strong></a>.</p>
-<p>Fuente de datos: <a href="https://www.ign.es/"><em>Instituto Geográfico Nacional</em> (IGN)</a>.</p>
+<p>Denominación de las ciudades autónomas, recomendada para rellenar el atributo <a href="../../datos/modelo_de_datos#371-comunidadciudad-autonoma"><strong><code>CA</code></strong></a>.
+<br />
+<br /></p>
 <table>
 <thead>
 <tr>
-<th>Código INE</th>
 <th>Ciudad autónoma</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>18</td>
 <td>Ciudad Autónoma de Ceuta</td>
 </tr>
 <tr>
-<td>19</td>
 <td>Ciudad Autónoma de Melilla</td>
 </tr>
 </tbody>
