--- a/referencias/comunidades_autonomas/index.html
+++ b/referencias/comunidades_autonomas/index.html
@@ -269,82 +269,65 @@
 <h2 id="comunidades-autonomas">COMUNIDADES AUTÓNOMAS</h2>
 <p><br />
 Comunidades autónomas de España, por orden alfabético, expresadas en lenguaje natural no indizado.</p>
-<p>Denominación de las comunidades autónomas, recomendada para cumplimentar el atributo <a href="../../datos/modelo_de_datos#371-comunidadciudad-autonoma"><strong><code>CA</code></strong></a>.</p>
-<p>Fuente de datos: <a href="https://www.ine.es/"><em>Instituto Nacional de Estadística</em> (INE)</a>.</p>
+<p>Denominación de las comunidades autónomas, recomendada para cumplimentar el atributo <a href="../../datos/modelo_de_datos#371-comunidadciudad-autonoma"><strong><code>CA</code></strong></a>.
+<br />
+<br /></p>
 <table>
 <thead>
 <tr>
-<th>Código INE</th>
 <th>Comunidad autónoma</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>01</td>
 <td>Andalucía</td>
 </tr>
 <tr>
-<td>02</td>
 <td>Aragón</td>
 </tr>
 <tr>
-<td>05</td>
 <td>Canarias</td>
 </tr>
 <tr>
-<td>06</td>
 <td>Cantabria</td>
 </tr>
 <tr>
-<td>07</td>
 <td>Castilla y León</td>
 </tr>
 <tr>
-<td>08</td>
 <td>Castilla-La Mancha</td>
 </tr>
 <tr>
-<td>09</td>
-<td>Cataluña</td>
+<td>Cataluña/Catalunya</td>
 </tr>
 <tr>
-<td>13</td>
 <td>Comunidad de Madrid</td>
 </tr>
 <tr>
-<td>15</td>
 <td>Comunidad Foral de Navarra</td>
 </tr>
 <tr>
-<td>10</td>
 <td>Comunitat Valenciana</td>
 </tr>
 <tr>
-<td>11</td>
 <td>Extremadura</td>
 </tr>
 <tr>
-<td>12</td>
 <td>Galicia</td>
 </tr>
 <tr>
-<td>04</td>
 <td>Illes Balears</td>
 </tr>
 <tr>
-<td>17</td>
 <td>La Rioja</td>
 </tr>
 <tr>
-<td>16</td>
-<td>País Vasco</td>
+<td>País Vasco/Euskadi</td>
 </tr>
 <tr>
-<td>03</td>
 <td>Principado de Asturias</td>
 </tr>
 <tr>
-<td>14</td>
 <td>Región de Murcia</td>
 </tr>
 </tbody>
