--- a/referencias/estados_del_dato/index.html
+++ b/referencias/estados_del_dato/index.html
@@ -269,7 +269,9 @@
 <h2 id="estados-del-dato">ESTADOS DEL DATO</h2>
 <p><br /></p>
 <p>Codificación del estado de un registro de datos utilizado para valorar el crédito que debe darse al mismo en relación con su oficialidad, su normalización y/o su vigencia.</p>
-<p>Se utiliza para cumplimentar el atributo <a href="../../datos/modelo_de_datos#311-estado"><strong><code>ESTADO</code></strong></a>.</p>
+<p>Se utiliza para cumplimentar el atributo <a href="../../datos/modelo_de_datos#311-estado"><strong><code>ESTADO</code></strong></a>.
+<br />
+<br /></p>
 <table>
 <thead>
 <tr>
