--- a/referencias/lenguas/index.html
+++ b/referencias/lenguas/index.html
@@ -268,7 +268,9 @@
 
 <h2 id="lenguas">LENGUAS</h2>
 <p><br />
-Codificación de tres (3) caracteres que se debe utilizar para cumplimentar el atributo <a href="../../datos/modelo_de_datos#39-lengua"><strong><code>LENGUA</code></strong></a>, conforme con la norma <a href="https://iso639-3.sil.org/code_tables/639/data">ISO 639-3</a></p>
+Codificación de tres (3) caracteres que se debe utilizar para cumplimentar el atributo <a href="../../datos/modelo_de_datos#39-lengua"><strong><code>LENGUA</code></strong></a>, conforme con la norma <a href="https://iso639-3.sil.org/code_tables/639/data">ISO 639-3</a>.
+<br />
+<br /></p>
 <table>
 <thead>
 <tr>
