--- a/referencias/provincias/index.html
+++ b/referencias/provincias/index.html
@@ -269,274 +269,222 @@
 <h2 id="provincias">PROVINCIAS</h2>
 <p><br />
 Provincias de España, por orden alfabético, expresadas en lenguaje natural no indizado.</p>
-<p>Denominación de las provincias, recomendada para cumplimentar el atributo <a href="../../datos/modelo_de_datos#372-provincia"><strong><code>PROVINCIA</code></strong></a>.</p>
-<p>Fuente de datos: <a href="https://www.ine.es/"><em>Instituto Nacional de Estadística</em> (INE)</a>.</p>
+<p>Denominación de las provincias, recomendada para cumplimentar el atributo <a href="../../datos/modelo_de_datos#372-provincia"><strong><code>PROVINCIA</code></strong></a>.
+<br />
+<br /></p>
 <table>
 <thead>
 <tr>
-<th>Código INE</th>
 <th>Provincia</th>
-<th>Comunidad/ciudad autónoma</th>
+<th>Comunidad/Ciudad Autónoma</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>15</td>
 <td>A Coruña</td>
 <td>Galicia</td>
 </tr>
 <tr>
-<td>02</td>
 <td>Albacete</td>
 <td>Castilla-La Mancha</td>
 </tr>
 <tr>
-<td>03</td>
 <td>Alacant/Alicante</td>
 <td>Comunitat Valenciana</td>
 </tr>
 <tr>
-<td>04</td>
 <td>Almería</td>
 <td>Andalucía</td>
 </tr>
 <tr>
-<td>01</td>
 <td>Araba/Álava</td>
-<td>País Vasco</td>
+<td>País Vasco/Euskadi</td>
 </tr>
 <tr>
-<td>33</td>
 <td>Asturias</td>
 <td>Principado de Asturias</td>
 </tr>
 <tr>
-<td>05</td>
 <td>Ávila</td>
 <td>Castilla y León</td>
 </tr>
 <tr>
-<td>06</td>
 <td>Badajoz</td>
 <td>Extremadura</td>
 </tr>
 <tr>
-<td>08</td>
 <td>Barcelona</td>
-<td>Cataluña</td>
+<td>Cataluña/Catalunya</td>
 </tr>
 <tr>
-<td>48</td>
 <td>Bizkaia</td>
-<td>País Vasco</td>
+<td>País Vasco/Euskadi</td>
 </tr>
 <tr>
-<td>09</td>
 <td>Burgos</td>
 <td>Castilla y León</td>
 </tr>
 <tr>
-<td>10</td>
 <td>Cáceres</td>
 <td>Extremadura</td>
 </tr>
 <tr>
-<td>11</td>
 <td>Cádiz</td>
 <td>Andalucía</td>
 </tr>
 <tr>
-<td>39</td>
 <td>Cantabria</td>
 <td>Cantabria</td>
 </tr>
 <tr>
-<td>12</td>
 <td>Castelló/Castellón</td>
 <td>Comunitat Valenciana</td>
 </tr>
 <tr>
-<td>51</td>
 <td>Ceuta</td>
 <td>Ciudad Autónoma de Ceuta</td>
 </tr>
 <tr>
-<td>13</td>
 <td>Ciudad Real</td>
 <td>Castilla-La Mancha</td>
 </tr>
 <tr>
-<td>14</td>
 <td>Córdoba</td>
 <td>Andalucía</td>
 </tr>
 <tr>
-<td>16</td>
 <td>Cuenca</td>
 <td>Castilla-La Mancha</td>
 </tr>
 <tr>
-<td>20</td>
 <td>Gipuzkoa</td>
-<td>País Vasco</td>
+<td>País Vasco/Euskadi</td>
 </tr>
 <tr>
-<td>17</td>
 <td>Girona</td>
-<td>Cataluña</td>
+<td>Cataluña/Catalunya</td>
 </tr>
 <tr>
-<td>18</td>
 <td>Granada</td>
 <td>Andalucía</td>
 </tr>
 <tr>
-<td>19</td>
 <td>Guadalajara</td>
 <td>Castilla-La Mancha</td>
 </tr>
 <tr>
-<td>21</td>
 <td>Huelva</td>
 <td>Andalucía</td>
 </tr>
 <tr>
-<td>22</td>
 <td>Huesca</td>
 <td>Aragón</td>
 </tr>
 <tr>
-<td>07</td>
 <td>Illes Balears</td>
 <td>Illes Balears</td>
 </tr>
 <tr>
-<td>23</td>
 <td>Jaén</td>
 <td>Andalucía</td>
 </tr>
 <tr>
-<td>26</td>
 <td>La Rioja</td>
 <td>La Rioja</td>
 </tr>
 <tr>
-<td>35</td>
 <td>Las Palmas</td>
 <td>Canarias</td>
 </tr>
 <tr>
-<td>24</td>
 <td>León</td>
 <td>Castilla y León</td>
 </tr>
 <tr>
-<td>25</td>
 <td>Lleida</td>
-<td>Cataluña</td>
+<td>Cataluña/Catalunya</td>
 </tr>
 <tr>
-<td>27</td>
 <td>Lugo</td>
 <td>Galicia</td>
 </tr>
 <tr>
-<td>28</td>
 <td>Madrid</td>
 <td>Comunidad de Madrid</td>
 </tr>
 <tr>
-<td>29</td>
 <td>Málaga</td>
 <td>Andalucía</td>
 </tr>
 <tr>
-<td>52</td>
 <td>Melilla</td>
 <td>Ciudad Autónoma de Melilla</td>
 </tr>
 <tr>
-<td>30</td>
 <td>Murcia</td>
 <td>Región de Murcia</td>
 </tr>
 <tr>
-<td>31</td>
 <td>Navarra</td>
 <td>Comunidad Foral de Navarra</td>
 </tr>
 <tr>
-<td>32</td>
 <td>Ourense</td>
 <td>Galicia</td>
 </tr>
 <tr>
-<td>34</td>
 <td>Palencia</td>
 <td>Castilla y León</td>
 </tr>
 <tr>
-<td>36</td>
 <td>Pontevedra</td>
 <td>Galicia</td>
 </tr>
 <tr>
-<td>37</td>
 <td>Salamanca</td>
 <td>Castilla y León</td>
 </tr>
 <tr>
-<td>38</td>
 <td>Santa Cruz de Tenerife</td>
 <td>Canarias</td>
 </tr>
 <tr>
-<td>40</td>
 <td>Segovia</td>
 <td>Castilla y León</td>
 </tr>
 <tr>
-<td>41</td>
 <td>Sevilla</td>
 <td>Andalucía</td>
 </tr>
 <tr>
-<td>42</td>
 <td>Soria</td>
 <td>Castilla y León</td>
 </tr>
 <tr>
-<td>43</td>
 <td>Tarragona</td>
-<td>Cataluña</td>
+<td>Cataluña/Catalunya</td>
 </tr>
 <tr>
-<td>44</td>
 <td>Teruel</td>
 <td>Aragón</td>
 </tr>
 <tr>
-<td>45</td>
 <td>Toledo</td>
 <td>Castilla-La Mancha</td>
 </tr>
 <tr>
-<td>46</td>
 <td>València/Valencia</td>
 <td>Comunitat Valenciana</td>
 </tr>
 <tr>
-<td>47</td>
 <td>Valladolid</td>
 <td>Castilla y León</td>
 </tr>
 <tr>
-<td>49</td>
 <td>Zamora</td>
 <td>Castilla y León</td>
 </tr>
 <tr>
-<td>50</td>
 <td>Zaragoza</td>
 <td>Aragón</td>
 </tr>
