--- a/referencias/tipos_de_dato/index.html
+++ b/referencias/tipos_de_dato/index.html
@@ -269,7 +269,9 @@
 <h2 id="tipos-de-dato">TIPOS DE DATO</h2>
 <p><br /></p>
 <p>Recoge la tipología del registro de datos con objeto de su aplicación en el algoritmo de búsqueda:</p>
-<p>Se utiliza para cumplimentar el atributo <a href="../../datos/modelo_de_datos#310-tipo-de-dato"><strong><code>TIPDATO</code></strong></a>.</p>
+<p>Se utiliza para cumplimentar el atributo <a href="../../datos/modelo_de_datos#310-tipo-de-dato"><strong><code>TIPDATO</code></strong></a>.
+<br />
+<br /></p>
 <table>
 <thead>
 <tr>
