añade camad a fuentes de datos

--- a/datos/fuentes_de_datos/index.html
+++ b/datos/fuentes_de_datos/index.html
@@ -283,6 +283,10 @@
 <td>Comunidad Autónoma de La Rioja</td>
 </tr>
 <tr>
+<td>camad</td>
+<td>Comunidad de Madrid</td>
+</tr>
+<tr>
 <td>canav</td>
 <td>Comunidad Foral de Navarra</td>
 </tr>
@@ -299,8 +303,7 @@
 <td></td>
 </tr>
 </tbody>
-</table>
-<hr /></div>
+</table></div>
         
         
     </div>
