--- a/datos/modelo_de_datos/index.html
+++ b/datos/modelo_de_datos/index.html
@@ -473,8 +473,8 @@ Este atributo, concatenado con el relativo a la fuente de datos, se puede utiliz
   <thead>
     <tr>
         <th>TIPVIA</th>
-        <th>nombre</th>
-        <th>población</th>
+        <th>NOMVIA</th>
+        <th></th>
     </tr>
   </thead>
   <tbody>
@@ -1307,7 +1307,7 @@ La norma <a href="https://www.une.org/encuentra-tu-norma/busca-tu-norma/norma?c=
 <p><br></p>
 <p>El formato de fichero de intercambio de datos debe ser conforme con el estándar CSV (<em>Comma-Separated Values</em>) <a href="https://datatracker.ietf.org/doc/html/rfc4180">[RFC 4180]</a>, utilizando como separador de los atributos el carácter <em>punto y coma</em> (;).</p>
 <p>Cada registro (dirección, topónimo, punto de interés) se define mediante una línea adicional en el fichero.</p>
-<p>Las coordenadas latitud, longitud, se deben expresan en formato geográfico decimal en el Sistema Geográfico de Referencia <a href="https://epsg.io/4258">EPSG:4258</a>, utilizando el carácter <em>punto</em> (.) como separador decimal.</p>
+<p>Las coordenadas latitud, longitud, se deben expresan en formato geográfico decimal en el Sistema Geográfico de Referencia <a href="https://epsg.io/4326">EPSG:4326</a>, utilizando el carácter <em>punto</em> (.) como separador decimal.</p>
 <p>Los datos de latitud y longitud deben indicarse con al menos cinco (5) cifras decimales de precisión geográfica.</p>
 <p>Codificación de caracteres: <a href="https://es.wikipedia.org/wiki/UTF-8">UTF-8 sin BOM</a>.</p>
 <p><br></p>
