Añade fuentes de datos
Añade como fuentes de datos en pruebas DG del Catastro y CNIG.

--- a/datos/fuentes_de_datos/index.html
+++ b/datos/fuentes_de_datos/index.html
@@ -291,6 +291,14 @@
 <td>Comunidad Foral de Navarra</td>
 </tr>
 <tr>
+<td>cnig</td>
+<td>Centro Nacional de Información Geográfica (CNIG)</td>
+</tr>
+<tr>
+<td>dgcat</td>
+<td>Dirección General del Catastro</td>
+</tr>
+<tr>
 <td>ieca</td>
 <td>Instituto de Estadística y Cartografía de Andalucía</td>
 </tr>
