Añade fuentes de datos en pruebas istac mun28079
Añade fuentes de datos en pruebas:
Instituto Canario de Estadística (ISTAC)
Ayuntamiento de Madrid

--- a/datos/fuentes_de_datos/index.html
+++ b/datos/fuentes_de_datos/index.html
@@ -303,8 +303,16 @@
 <td>Instituto de Estadística y Cartografía de Andalucía</td>
 </tr>
 <tr>
+<td>istac</td>
+<td>Instituto Canario de Estadística (ISTAC)</td>
+</tr>
+<tr>
 <td>mun10037</td>
 <td>Ayuntamiento de Cáceres</td>
+</tr>
+<tr>
+<td>mun28079</td>
+<td>Ayuntamiento de Madrid</td>
 </tr>
 <tr>
 <td><br /></td>
