Añade ine en proveedores de datos
Añade ine en el listado de proveedores de datos y mineco en datos de prueba

--- a/datos/fuentes_de_datos/index.html
+++ b/datos/fuentes_de_datos/index.html
@@ -307,6 +307,10 @@
 <td>Instituto Canario de Estadística (ISTAC)</td>
 </tr>
 <tr>
+<td>mineco</td>
+<td>Ministerio de Asuntos Económicos y Transformación Digital</td>
+</tr>
+<tr>
 <td>mun10037</td>
 <td>Ayuntamiento de Cáceres</td>
 </tr>
