--- a/referencias/proveedores_de_datos/index.html
+++ b/referencias/proveedores_de_datos/index.html
@@ -414,6 +414,10 @@
 <td>Instituto Geográfico Nacional (IGN)</td>
 </tr>
 <tr>
+<td>ine</td>
+<td>Instituto Nacional de Estadística</td>
+</tr>
+<tr>
 <td>secyt</td>
 <td>Sociedad Estatal Correos y Telégrafos</td>
 </tr>
