--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
   <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.18.0/build/styles/github.min.css">
-  <link href="../../css/custom.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
 
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
