--- a/web-doc/index.html
+++ b/web-doc/index.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="Proyecto de geocodificación o geolocalizador de direcciones. Comisión Especializada de Normas Geográficas. España">
   <meta name="author" content="Sistema Cartográfico Nacional">
-  <link rel="canonical" href="https://ideespain.github.io/geocodificador/">
+  <link rel="canonical" href="https://ideespain.github.io/Geolocalizacion/">
   <link rel="shortcut icon" href="img/favicon.ico">
 
 
@@ -29,7 +29,7 @@
 
 
   <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.18.0/build/styles/github.min.css">
-  <link href="../../css/custom.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
 
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -45,97 +45,97 @@
               "@type": "ListItem", 
               "position": 1, 
               "name": "Servicio de geocodificación o geolocalización direcciones del sistema cartográfico nacional (España)",
-              "item": "https://ideespain.github.io/geocodificador/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/"  
             },{
               "@type": "ListItem", 
               "position": 2, 
               "name": "Modelo de datos",
-              "item": "https://ideespain.github.io/geocodificador/datos/modelo_de_datos/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/datos/modelo_de_datos/"  
             },{
               "@type": "ListItem", 
               "position": 3, 
               "name": "Fuente de datos",
-              "item": "https://ideespain.github.io/geocodificador/datos/fuentes_de_datos/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/datos/fuentes_de_datos/"  
             },{
               "@type": "ListItem", 
               "position": 4, 
               "name": "Información general",
-              "item": "https://ideespain.github.io/geocodificador/api/informacion_general/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/api/informacion_general/"  
             },{
               "@type": "ListItem", 
               "position": 5, 
               "name": "Geolocalización por identificador geográfico",
-              "item": "https://ideespain.github.io/geocodificador/api/geolocalizacion_por_identificador_geografico/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/api/geolocalizacion_por_identificador_geografico/"  
             },{
               "@type": "ListItem", 
               "position": 6, 
               "name": "Geolocalización por coordenadas geográficas",
-              "item": "https://ideespain.github.io/geocodificador/api/geolocalizacion_por_coordenadas_geograficas/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/api/geolocalizacion_por_coordenadas_geograficas/"  
             },{
               "@type": "ListItem", 
               "position": 7, 
               "name": "Autocompletar",
-              "item": "https://ideespain.github.io/geocodificador/api/autocompletar/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/api/autocompletar/"  
             },{
               "@type": "ListItem", 
               "position": 8, 
               "name": "Geolocalización estructurada",
-              "item": "https://ideespain.github.io/geocodificador/api/geolocalizacion_estructurada/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/api/geolocalizacion_estructurada/"  
             },{
               "@type": "ListItem", 
               "position": 9, 
               "name": "Abreviaturas",
-              "item": "https://ideespain.github.io/geocodificador/referencias/abreviaturas/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/referencias/abreviaturas/"  
             },{
               "@type": "ListItem", 
               "position": 10, 
               "name": "Ciudades Autonomas",
-              "item": "https://ideespain.github.io/geocodificador/referencias/ciudades_autonomas/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/referencias/ciudades_autonomas/"  
             },{
               "@type": "ListItem", 
               "position": 11, 
               "name": "Comunidades Autonomas",
-              "item": "https://ideespain.github.io/geocodificador/referencias/comunidades_autonomas/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/referencias/comunidades_autonomas/"  
             },{
               "@type": "ListItem", 
               "position": 12, 
               "name": "Estado del dato",
-              "item": "https://ideespain.github.io/geocodificador/referencias/estados_del_dato/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/referencias/estados_del_dato/"  
             },{
               "@type": "ListItem", 
               "position": 13, 
               "name": "Lenguas",
-              "item": "https://ideespain.github.io/geocodificador/referencias/lenguas/" 
+              "item": "https://ideespain.github.io/Geolocalizacion/referencias/lenguas/" 
             },{
               "@type": "ListItem", 
               "position": 14, 
               "name": "Proveedores de datos",
-              "item": "https://ideespain.github.io/geocodificador/referencias/proveedores_de_datos/" 
+              "item": "https://ideespain.github.io/Geolocalizacion/referencias/proveedores_de_datos/" 
             },{
               "@type": "ListItem", 
               "position": 15, 
               "name": "Provincias",
-              "item": "https://ideespain.github.io/geocodificador/referencias/provincias/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/referencias/provincias/"  
             },{
               "@type": "ListItem", 
               "position": 16, 
               "name": "Tipos de dato",
-              "item": "https://ideespain.github.io/geocodificador/referencias/tipos_de_dato/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/referencias/tipos_de_dato/"  
             },{
               "@type": "ListItem", 
               "position": 17, 
               "name": "Visualizador",
-              "item": "https://ideespain.github.io/geocodificador/visualizador/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/visualizador/"  
             },{
               "@type": "ListItem", 
               "position": 18, 
               "name": "Resumen del proyecto",
-              "item": "https://ideespain.github.io/geocodificador/resumen_del_proyecto/"  
+              "item": "https://ideespain.github.io/Geolocalizacion/resumen_del_proyecto/"  
             },{
               "@type": "ListItem", 
               "position": 19, 
               "name": "Colabora. ¿Cómo publicar las direcciones y otros datos?",
-              "item": "https://ideespain.github.io/geocodificador/proyecto/colabora/"
+              "item": "https://ideespain.github.io/Geolocalizacion/proyecto/colabora/"
             }]
           }
 </script>
@@ -164,7 +164,7 @@
         <!-- Main title -->
 
 
-        <a class="navbar-brand" href=".">Geolocalizador SCN</a>
+        <a class="navbar-brand" href="./">Geolocalizador SCN</a>
 
       </div>
 
@@ -336,7 +336,7 @@
                         <a href="ejemplos/no_disponible/">Ejemplos</a>
                     </li> -->
           <li>
-            <a href="../visualizador/">Visualizador</a>
+            <a href="visualizador/">Visualizador</a>
           </li>
 
           <li class="dropdown">
@@ -345,10 +345,10 @@
 
 
           <li>
-              <a href="./proyecto/resumen_del_proyecto/">Resumen del Proyecto</a>
+              <a href="proyecto/resumen_del_proyecto/">Resumen del Proyecto</a>
           </li>
           <li>
-            <a href="./proyecto/colabora/">Colabora</a>
+            <a href="proyecto/colabora/">Colabora</a>
           </li>
 
           </ul>
@@ -371,7 +371,7 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/IDEESpain/Geolocalizacion/edit/master/docs/index.md"><i
+            <a href="https://github.com/IDEESpain/Geolocalizacion/tree/main"><i
                 class="fab fa-github"></i> Edit on GitHub</a>
           </li>
         </ul>
@@ -489,7 +489,7 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
 
-  <script>var base_url = "."</script>
+  <script>var base_url = "./"</script>
 
   <script src="js/base.js"></script>
   <script src="search/main.js"></script>
