Correccion ortográfica y cambios de link rotos

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
       <h2 id="servicio-de-geocodificacion-o-geolocalizacion-de-direcciones-del-sistema-cartografico-nacional-espana">
         Servicio de geocodificación o geolocalización de direcciones postales del Sistema Cartográfico Nacional de España</h2>
       <p><br /></p>
-      <p>El 14 de diciembre de 2020 <a href="https://www.csg-cnc.es/"><em>Comisión Especializada de Normas
+      <p>El 14 de diciembre de 2020 la <a href="https://www.csg-cnc.es/"><em>Comisión Especializada de Normas
             Geográficas</a> (1)</em> del <a
           href="https://www.mitma.gob.es/organos-colegiados/consejo-superior-geografico/csg"><em>Consejo Superior
             Geográfico</em></a> de España, puso en marcha un subgrupo de trabajo para la realización del proyecto
