--- a/referencias/proveedores_de_datos/index.html
+++ b/referencias/proveedores_de_datos/index.html
@@ -409,6 +409,7 @@
 <blockquote>
 <p>Nota: A los datos de direcciones que se encuentran en desuso o sin vigencia administrativa, cuyo atributo <code>ESTADO</code> tiene el valor <em>Histórico</em>, se les añade al código de proveedor el sufijo «-h», con objeto de poder realizar <em>geolocalización por identificador geográfico</em> específica mediante el parámetro <a href="../../api/geolocalizacion_por_identificador_geografico/#filtrado-por-origen-de-los-datos"><strong><code>sources</code></strong></a>, y evitar al mismo tiempo interferencias en los procesos de <em>geolocalización por coordenadas geográficas</em>.</p>
 </blockquote>
+<p>A continuación, se muestra el listado de los actuales y posibles proveedores.</p>
 <h3 id="administracion-general-del-estado-ministerios">Administración General del Estado (Ministerios)</h3>
 <p><br /></p>
 <table>
