--- a/web-doc/datos/fuentes_de_datos/index.html
+++ b/web-doc/datos/fuentes_de_datos/index.html
@@ -386,7 +386,7 @@
 
 <h2 id="fuentes-de-datos">Fuentes de datos</h2>
 <br /></p>
-<p>Estos son los códigos de los proveedores de los datos de ejemplo que se han cargado para efectuar las pruebas de geocodificación.</p>
+<p>Estos son los códigos de los proveedores de datos que han sido publicados en el geolocalizador.</p>
 <table>
 <thead>
 <tr>
@@ -400,40 +400,12 @@
 <td>Comunidad Autónoma de La Rioja</td>
 </tr>
 <tr>
-<td>camad</td>
-<td>Comunidad de Madrid</td>
-</tr>
-<tr>
-<td>canav</td>
-<td>Comunidad Foral de Navarra</td>
-</tr>
-<tr>
 <td>cnig</td>
 <td>Centro Nacional de Información Geográfica (CNIG)</td>
 </tr>
 <tr>
 <td>dgcat</td>
 <td>Dirección General del Catastro</td>
-</tr>
-<tr>
-<td>ieca</td>
-<td>Instituto de Estadística y Cartografía de Andalucía</td>
-</tr>
-<tr>
-<td>istac</td>
-<td>Instituto Canario de Estadística (ISTAC)</td>
-</tr>
-<tr>
-<td>mineco</td>
-<td>Ministerio de Asuntos Económicos y Transformación Digital</td>
-</tr>
-<tr>
-<td>mun10037</td>
-<td>Ayuntamiento de Cáceres</td>
-</tr>
-<tr>
-<td>mun28079</td>
-<td>Ayuntamiento de Madrid</td>
 </tr>
 <tr>
 <td><br /></td>
