--- a/web-doc/datos/fuentes_de_datos/index.html
+++ b/web-doc/datos/fuentes_de_datos/index.html
@@ -400,6 +400,10 @@
 <td>Comunidad Autónoma de La Rioja</td>
 </tr>
 <tr>
+  <td>canav</td>
+  <td>Comunidad Foral de Navarra</td>
+</tr>
+<tr>
 <td>cnig</td>
 <td>Centro Nacional de Información Geográfica (CNIG)</td>
 </tr>
