Cambio de link de descarga .csv
Cambio de link de descarga .csv

--- a/datos/modelo_de_datos/index.html
+++ b/datos/modelo_de_datos/index.html
@@ -462,7 +462,7 @@
           <li>Codificación de caracteres: <a href="https://es.wikipedia.org/wiki/UTF-8">UTF-8 sin BOM</a>.</li>
           </ul>
           <br>
-          <p>Se tiene <strong><a href="../fuentes_de_datos/" download="ejemplo.csv">aquí</a></strong>, un fichero CSV con la cabecera ya creada.</p>
+          <p>Se tiene <strong><a href="../../datos/modelo_de_datos/ejemplo.csv" download="ejemplo.csv">aquí</a></strong>, un fichero CSV con la cabecera ya creada.</p>
           <p><br></p>
           <h3 id="4-modelo-de-datos">4. Modelo de datos.</h3>
           <p><br></p>
